--- a/manifest.json
+++ b/manifest.json
@@ -7,15 +7,18 @@
   "browser_action": {
     "default_icon": "train.png",
     "default_popup": "index.html"
-  },
+    },
+    "content_scripts": [ {
+      "js": [ "js/lib/jquery-1.9.1.min.js", "js/eventPage.js" ],
+      "run_at" : "document_start"
+      } ],
 
-  "background": {
-    "scripts": ["eventPage.js"],
-    "persistent": true
-  },
+      "background": {
+        "scripts": ["eventPage.js"],
+        "persistent": true
+        },
 
-  "permissions": [
-    "https://myttc.ca",
-    "tabs"
-  ]
-}
+        "permissions": [
+        "tabs"
+        ]
+      }
