background js page created to listen for user preferences

--- a/manifest.json
+++ b/manifest.json
@@ -14,14 +14,15 @@
     //   } ],
 
     "background": {
-      "scripts": ["js/eventPage.js"],
+      "scripts": ["js/background.js"],
       "persistent": true
       },
 
       "options_page": "options.html",
 
       "permissions": [
-      "tabs"
+      "tabs",
+      "storage"
       // geolocation
       ]
     }
