--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,8 @@
 {
   "name": "bapt",
+  "permissions": [
+    "storage"
+  ],
   "description": "Track your transit acurately, in a glance.",
   "manifest_version": 2,
   "version": "0.0.1",
@@ -7,7 +10,7 @@
   "browser_action": {
     "default_icon": "train.png",
     "default_popup": "index.html"
-    },
+  },
     // "content_scripts": [ {
     //   "js": [ "jquery.min.js", "js/eventPage.js" ],
     //   "run_at" : "document_start"
@@ -18,11 +21,5 @@
     //   "persistent": true
     //   },
 
-      "options_page": "options.html",
-
-      "permissions": [
-      "storage"
-      // "background"
-      // geolocation
-      ]
-    }
+  "options_page": "options.html"
+}
