--- a/manifest.json
+++ b/manifest.json
@@ -10,8 +10,6 @@
 
   "browser_action": {
     "default_icon": "images/train.png",
-    "default_popup": "index.html"
+    "default_popup": "popup.html"
   }
-
-  // "options_page": "options.html"
 }
