working to display all stops with no predictions

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Route Voyeur",
+  "name": "Route Watcher",
   "icons": {"128":"images/train128.png"}, 
   "permissions": [
     "storage"
